Dark theme fixes (#1133)
CSS fixes for the dark theme to fix divs that didn't show. This PR also applies a syntax color theme for code cells and skins the scrollbars.

--- a/sources/web/datalab/static/dark.css
+++ b/sources/web/datalab/static/dark.css
@@ -56,13 +56,16 @@ span.autosave_status {
   color: #ddd;
 }
 a {
-  color: #ddd;
+  color: #ffe883;
 }
 a:visited {
-  color: #ddd;
+  color: #ffe883;
 }
 a:hover {
   color: #fff;
+}
+a.item_link {
+  color: #ddd;
 }
 input {
   background-color: #333;
@@ -90,6 +93,10 @@ input {
 .dropdown-menu li a {
   color: #ddd;
 }
+.dropdown-menu li a:hover {
+  color: #ddd;
+  background-color: #444;
+}
 #updateMessageArea a {
   color: #333;
 }
@@ -101,26 +108,31 @@ input {
 div.text_cell_render {
   color: #ddd;
 }
-.rendered_html pre, .rendered_html code, .rendered_html {
-  background-color: none;
+.notebook_app .rendered_html table, .notebook_app .rendered_html th,
+.notebook_app .rendered_html tr, .notebook_app .rendered_html td,
+.notebook_app .rendered_html code, .notebook_app .rendered_html pre {
+  background-color: #444;
   color: #ddd;
+}
+.notebook_app .rendered_html .headerrow {
+    background-color: #333;
 }
 div.cell.selected {
   background: linear-gradient(to right, #42A5F5 -40px, #42A5F5 5px, transparent 5px, transparent 100%);
-  border: solid 1px #555;
+  border: solid 1px #333 !important;
 }
 div.code_cell.session.completed div.input {
   border-left: solid 4px #559ad7;
 }
 div.code_cell div.input {
   background-color: #333;
-  border-left: solid 4px #555;
+  border-left: solid 4px #666;
 }
-div.output, div.output_area pre {
+div.output, div.output_area pre, .notebook_app .rendered_html {
   color: #ddd;
 }
 div.output {
-  background-color: #555;
+  background-color: #444;
 }
 div.output_stderr {
   background-color: #a94442;
@@ -140,28 +152,10 @@ input.raw_input::-moz-selection {
   background: #333;
 }
 .CodeMirror-selected {
-  background-color: #555 !important;
-}
-.CodeMirror-gutters {
-  color: #ddd;
-  background: #333;
+  background-color: #444 !important;
 }
 .CodeMirror-cursor {
   border-left-color: #eee;
-}
-.cm-keyword {
-  color: #aaf !important;
-}
-.cm-number, .cm-string, .cm-string2 {
-  color: lightgreen !important;
-}
-.cm-def, .cm-variable, .cm-variable-2, .cm-variable-3, .cm-property,
-.cm-qualifier, .cm-operator, .cm-meta, .cm-builtin,
-.cm-tag, .cm-attribute, .cm-header, .cm-hr, .cm-atom {
-  color: #559edd !important;
-}
-.cm-link, .cm-url {
-  color: #559ad7 !important;
 }
 code {
   background-color: #666;
@@ -177,9 +171,6 @@ code {
 }
 .ansiyellow {
   color: #ff0;
-}
-.cm-magic, .ansired {
-  color: #559edd;
 }
 .item_icon {
   color: #adadad;
@@ -208,6 +199,94 @@ table.bqsv th, table.bqsv td {
   color: #ddd;
 }
 
+/* Monokai theme for code cells */
+.cm-s-ipython.CodeMirror {
+  background: #333;
+  color: #f8f8f2;
+}
+.cm-s-ipython div.CodeMirror-selected {
+  background: #49483E;
+}
+.cm-s-ipython .CodeMirror-line::selection, .cm-s-ipython .CodeMirror-line > span::selection, .cm-s-ipython .CodeMirror-line > span > span::selection {
+  background: rgba(73, 72, 62, .99);
+}
+.cm-s-ipython .CodeMirror-line::-moz-selection, .cm-s-ipython .CodeMirror-line > span::-moz-selection, .cm-s-ipython .CodeMirror-line > span > span::-moz-selection {
+  background: rgba(73, 72, 62, .99);
+}
+.cm-s-ipython .CodeMirror-gutters {
+  background: #272822;
+  border-right: 1px solid #666;
+  color: #444;
+}
+.cm-s-ipython .CodeMirror-guttermarker {
+  color: white;
+}
+.cm-s-ipython .CodeMirror-guttermarker-subtle {
+  color: #d0d0d0;
+}
+.cm-s-ipython .CodeMirror-linenumber {
+  color: #888;
+}
+.cm-s-ipython .CodeMirror-cursor {
+  border-left: 1px solid #f8f8f0;
+}
+.cm-s-ipython span.cm-comment {
+  color: #75715e;
+}
+.cm-s-ipython span.cm-atom {
+  color: #ae81ff;
+}
+.cm-s-ipython span.cm-number {
+  color: #ae81ff;
+}
+.cm-s-ipython span.cm-property, .cm-s-ipython span.cm-attribute {
+  color: #a6e22e;
+}
+.cm-s-ipython span.cm-keyword {
+  color: #f92672;
+}
+.cm-s-ipython span.cm-string {
+  color: #e6db74;
+}
+.cm-s-ipython span.cm-operator {
+  color: #ae81ff;
+}
+.cm-s-ipython span.cm-variable {
+  color: #f8f8f2;
+}
+.cm-s-ipython span.cm-variable-2 {
+  color: #9effff;
+}
+.cm-s-ipython span.cm-variable-3 {
+  color: #66d9ef;
+}
+.cm-s-ipython span.cm-def {
+  color: #fd971f;
+}
+.cm-s-ipython span.cm-bracket {
+  color: #f8f8f2;
+}
+.cm-s-ipython span.cm-tag {
+  color: #f92672;
+}
+.cm-s-ipython span.cm-header {
+  color: #ae81ff;
+}
+.cm-s-ipython span.cm-link {
+  color: #ae81ff;
+}
+.cm-s-ipython span.cm-error {
+  color: #f8f8f0;
+}
+.cm-s-ipython .CodeMirror-activeline-background {
+  background: #373831;
+}
+
+.cm-s-ipython .CodeMirror-matchingbracket {
+  text-decoration: underline;
+  color: white !important;
+}
+
 /* Modals */
 .modal-content {
   background-color: #444;
@@ -217,10 +296,10 @@ table.bqsv th, table.bqsv td {
   color: #ddd;
 }
 .modal-header {
-  border-bottom: 1px solid #555;
+  border-bottom: 1px solid #444;
 }
 .modal-footer {
-  border-top: 1px solid #555;
+  border-top: 1px solid #444;
 }
 .close {
   color: inherit;
@@ -237,4 +316,18 @@ svg>rect {
 }
 svg text {
   fill: #ddd;
+}
+
+/* Scrollbars */
+::-webkit-scrollbar {
+	width: 12px;
+	background-color: #555;
+}
+::-webkit-scrollbar-thumb {
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	background-color: #333;
+}
+::-webkit-scrollbar-thumb:hover {
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	background-color: #222;
 }
